# warriorcats_translater

./: README.md  pyproject.toml
src/warriorcats_translater/: __init__.py  __main__.py  cli.py  models.py  parse.py  translate.py
src/warriorcats_translater/utils/: cache.py  config.py
tests/: into_the_wild.epub  test_a.py
tests/test_load_config/: test_load_config.py
tests/test_load_files/: test_load_files.py  translate_cache.json
tests/test_parse/: test_parse.py
tests/test_parse/parser/: script1.py
