[project]
name = "warriorcats-translater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "diegow", email = "diegow876@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "ebooklib",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
